--- a/index.html
+++ b/index.html
@@ -2,8 +2,51 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head> 
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Portfolio Project</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+	<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+  <header>
+  <h1>Oliver Thinkful</h1>
+    <h4>Software Developer</h4>
+  </header>
+  
+  <main>
+  <img src="Me.jpg"/>
+    <!--inro--> 
+    <h2>Hi! I'm Oliver Thinkful</h2>
+    <hr>
+      <p>I'm an aspiring software developer living in San Francisco California.</p>
+      <p>I'm also a muscican and I find there are parallels with music and programing.</p>
+
+    <ul class=list1>
+        <li>They are both languages.</li>
+        <li>learning new tricks gives you greater abilty to express yourself.</li>
+        <li>Both are an artistic expression and a science.</li>     
+      </ul>
+     
+    <hr>
+    <!--about me-->
+    <article>
+      <h3>About Oliver</h3>
+      <p>After graduating college as a music major I moved to South America to venture a side of me that I longed to explore. I travled around some and eventually began playing in a big band where I stayed on for a couple years. 
+ After that I worked as an intern at a brewery and then started producing my own brew that I sold to local stores.</p>
+      <p>Eventually I moved back to the States and started working different jobs. I knew by this point that I needed to find a new carrer path.</p>
+      <P>While I was struggling to find my place in the world, my sister had graduated as a programer and over the years I have have seen her grow and become a successful multi-media artist, thanks to her programing skills! Check out my sisters webpage <a href="https://www.camilamagrane.com" target="_blank">link</a></p>
+       <p>I have decided to follow suit! I'm so exicted to work with other developers to make great software. Contact me if you're looking to hire a new developer.</p>
+ </main>
+      <hr>
+ 
+<!--contact-->
+<footer>
+    <h3>Contact Oliver</h3>
+    <p>Please feel free to contact me or follow me...</p>
+    <ol>
+      <li><a href="https://github.com/folivermm" target="_blank">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/oliver-magrane-271857261/" target="_blank">Linkedin</a></li>
+    </ol> 
+</footer>
+</body>
