--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <h4>Software Developer</h4>
   </header>
   
-  <main>
-  <img src="Me.jpg"/>
+<main>
+  <img src="Me.jpg"
+       alt="picture of me"/>
     <!--inro--> 
     <h2>Hi! I'm Oliver Thinkful</h2>
     <hr>
@@ -32,12 +33,12 @@
     <!--about me-->
     <article>
       <h3>About Oliver</h3>
-      <p>After graduating college as a music major I moved to South America to venture a side of me that I longed to explore. I travled around some and eventually began playing in a big band where I stayed on for a couple years. 
- After that I worked as an intern at a brewery and then started producing my own brew that I sold to local stores.</p>
+      <p>After graduating college as a music major I moved to South America to venture a side of me that I longed to explore. I travled around some and eventually began playing in a big band where I stayed on for a couple years.  After that I worked as an intern at a brewery and then started producing my own brew that I sold to local stores.</p>
       <p>Eventually I moved back to the States and started working different jobs. I knew by this point that I needed to find a new carrer path.</p>
       <P>While I was struggling to find my place in the world, my sister had graduated as a programer and over the years I have have seen her grow and become a successful multi-media artist, thanks to her programing skills! Check out my sisters webpage <a href="https://www.camilamagrane.com" target="_blank">link</a></p>
        <p>I have decided to follow suit! I'm so exicted to work with other developers to make great software. Contact me if you're looking to hire a new developer.</p>
- </main>
+	  </article>
+	    </main>
       <hr>
  
 <!--contact-->
